# routes/api/games.js
@@ -91,10 +91,9 @@ async function externalGameSearch(req, res, query, modelName = 'game') {
   const isLocalSort = sortField ? hasLocalFields({ [sortField]: true }, modelName) : false;
   let results;
 
-  console.log(isLocalSort)
   if (isLocalSort) {
     results = await searchLocalGame(query);
-    console.log(query)
+    // console.log(query)
     if (!Array.isArray(results)) results = results ? [results] : [];
 
     // Si hay menos resultados que los requeridos por limit/offset, buscar en IGDB
